<resources>
    <string name="app_name">Tick Tock</string>

    <string name="clock">Clock</string>
    <string name="alarm">Alarm</string>
    <string name="timer">Timer</string>
    <string name="stopwatch">Stopwatch</string>

    <string name="alarms">Alarms</string>

    <string name="timezone">Timezone</string>
    <string name="timezone_name">Timezone Name</string>

    <string name="time_def_12">00:00 AM</string>
    <string name="time_def_24">00:00</string>
    <string name="time_period_def">AM</string>
    <string name="date_def">January 01, 2020</string>

    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="sound">Sound</string>
    <string name="snooze">Snooze</string>

    <string name="stopwatch_def">00:00:00</string>

    <string name="sunday">S</string>
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">T</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>
    <string name="everyday">Everyday</string>
    <string name="single">Single</string>

    <string name="cancel">Cancel</string>
</resources>