<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        tools:layout_editor_absoluteX="3dp"
        tools:layout_editor_absoluteY="3dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/alarmConstraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/alarmSateSwitch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/alarmTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_def_24"
                android:textAppearance="@style/Time.Disabled"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/alarmPeriodTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/time_period_def"
                android:textAppearance="@style/Time.Period.Disabled"
                app:layout_constraintStart_toEndOf="@+id/alarmTimeTextView"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/daysLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/alarmTimeTextView">

                <TextView
                    android:id="@+id/sunTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/sunday"
                    android:textAppearance="@style/Alarm.Repeat.Disabled" />

                <TextView
                    android:id="@+id/monTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/monday"
                    android:textAppearance="@style/Alarm.Repeat.Disabled" />

                <TextView
                    android:id="@+id/tueTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/tuesday"
                    android:textAppearance="@style/Alarm.Repeat.Disabled" />

                <TextView
                    android:id="@+id/wedTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/wednesday"
                    android:textAppearance="@style/Alarm.Repeat.Disabled" />

                <TextView
                    android:id="@+id/thuTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/thursday"
                    android:textAppearance="@style/Alarm.Repeat.Disabled" />

                <TextView
                    android:id="@+id/friTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/friday"
                    android:textAppearance="@style/Alarm.Repeat.Disabled" />

                <TextView
                    android:id="@+id/satTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/saturday"
                    android:textAppearance="@style/Alarm.Repeat.Disabled" />

            </LinearLayout>

            <TextView
                android:id="@+id/repeatTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:text="@string/everyday"
                android:textAppearance="@style/Alarm.Repeat"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/alarmTimeTextView"
                tools:visibility="invisible" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/alarmSateSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>